--- a/index.html
+++ b/index.html
@@ -6,50 +6,30 @@
     <title>For Web Design Course</title>
     <!--googlefontの読み込み-->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-
-    <!--jQueryの読み込みはGoogleのCDNからが便利-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <!--nav1 Drawerの読み込み-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
-
-    <!--bg1 raindropsの読み込み-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="./js/raindrops.js"></script>
-
-    <!--text1 ShuffleLettersの読み込み-->
-    <script src="./js/jquery.shuffleLetters.js"></script>
-
-    <!--bg2 bxsliderの読み込み-->
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <link rel="stylesheet" href="./css/jquery.bxslider.css">
-
     <!--contents1 slickの読み込み-->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
-    <script type="text/javascript" src="./js/slick.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/slick.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="./css/slick-theme.css" media="screen" />
-
     <!--contents2 modaalの読み込み-->
     <link rel="stylesheet" href="./css/modaal.css">
-    <script type="text/javascript" src="./js/modaal.min.js"></script>
-
     <!--contents3 animateの読み込み-->
     <link rel="stylesheet" href="./css/animate.css">
-    <script type="text/javascript" src="./js/jquery.animateCssPlus.js"></script>
-
     <!--contents5 izimodalの読み込み-->
-    <script src="./js/iziModal.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="./css/iziModal.min.css">
-
     <!--基本データの読み込み-->
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="./js/main.js"></script>
 </head>
 
 <body class="drawer drawer--left">
+    <!--水平ナビゲーション-->
+    <nav id="container-example">
+        <div class='strip colour-1'>
+            <a href="#" class="">Page1</a>
+            <a href="second.html" class="">Page2</a>
+            <a href="third.html" class="">Page3</a>
+        </div>
+    </nav>
     <header role="banner">
         <button type="button" class="drawer-toggle drawer-hamburger">
           <span class="sr-only">toggle navigation</span>
@@ -61,8 +41,6 @@
                     <h1 class="drawer-brand" href="#link-top">MENU</h1>
                 </li>
                 <li><a class="drawer-menu-item" href="#link-bg1">Rain effect</a></li>
-                <li><a class="drawer-menu-item" href="#link-bg2">Slideshow</a></li>
-                <li><a class="drawer-menu-item" href="#link-bg3">BG-Movie</a></li>
                 <li><a class="drawer-menu-item" href="#link-contents1">Gallery</a></li>
                 <li><a class="drawer-menu-item" href="#link-contents2">Modal</a></li>
                 <li><a class="drawer-menu-item" href="#link-contents3">Animation</a></li>
@@ -77,33 +55,71 @@
         <!--雨水滴る風背景-->
         <section id="link-bg1">
             <div id="text1" class="toptitle">
-                <!--ShuffleLettersを使用したランダムテキスト表示-->
-                <h1 class="shuffle title1">For Web Design Course</h1>
-                <h1 class="title2">For <br> Web Design <br> Course</h1>
+                <h1 class="title1">For Web Course</h1>
+                <h1 class="title2">For<br>Web<br>Course</h1>
                 <h2>supported by Chatsumi</h2>
             </div>
         </section>
-        <!--bxsliderを使用した全画面スライドショー-->
-        <section id="link-bg2">
-            <h1 class="title">Slideshow</h1>
-            <div class="bg2">
-                <div class="slider">
-                    <!--画像の大きさは揃える-->
-                    <div><img src="images/bg1_1.jpeg" alt=""></div>
-                    <div><img src="images/bg1_2.jpeg" alt=""></div>
-                    <div><img src="images/bg1_3.jpeg" alt=""></div>
+
+        <!--hover-->
+        <section id="link-contents1">
+            <h1 class="title">Hover & Text</h1>
+            <div class="contents1">
+                <div class="con1-1">
+                    <img src="images/contents1.jpeg" alt="">
+                    <p>説明とか</p>
+                </div>
+                <div class="con1-2">
+                    <img src="images/contents1.jpeg" alt="">
+                    <p>説明とか</p>
                 </div>
             </div>
         </section>
-        <!--全画面動画背景-->
-        <section id="link-bg3">
-            <h1 class="title">BG-Movie</h1>
-            <div class="movie">
-                <video src="aimyon.mp4" autoplay loop muted></video>
+
+        <!--CSSアニメーション-->
+        <section id="link-contents2">
+            <h1 class="title">Animation</h1>
+            <div class="contents2">
+                <div class="con2-res">
+                    <div class="fadein animated con2-1">
+                        <h2>ONE</h2>
+                    </div>
+                    <div class="fadein animated con2-2">
+                        <h2>TWO</h2>
+                    </div>
+                </div>
+                <div class="con2-res">
+                    <div class="fadein animated con2-3">
+                        <h2>THREE</h2>
+                    </div>
+                    <div class="fadein animated con2-4">
+                        <h2>FOUR</h2>
+                    </div>
+                </div>
             </div>
         </section>
+
+        <!--もっと見るボタン-->
+        <section id="link-contents3">
+            <h1 class="title">More Button</h1>
+            <div class="contents3">
+                <div class="content">
+                    <div class="contents3_in">
+                        <p>MOJI</p>
+                    </div>
+                    <p class="morebutton">OPEN</p>
+                </div>
+                <div class="content">
+                    <div class="contents3_in">
+                        <img src="images/contents4.jpeg" alt="">
+                    </div>
+                    <p class="morebutton">OPEN</p>
+                </div>
+            </div>
+        </section>
+
         <!--slickを使用したギャラリー表示-->
-        <section id="link-contents1">
+        <section id="link-contents4">
             <h1 class="title">Gallery</h1>
             <div class="slick">
                 <div><img src="images/contents1_1.jpg" alt=""></div>
@@ -112,13 +128,14 @@
                 <div><img src="images/contents1_4.jpeg" alt=""></div>
             </div>
         </section>
+
         <!--modaalを使用したモーダル表示-->
-        <section id="link-contents2">
+        <section id="link-contents5">
             <h1 class="title">Modal</h1>
             <div class="switch">
-                <a href="#modal1" class="modal"><img src="images/bg1_1.jpeg" alt=""></a>
-                <a href="#modal2" class="modal"><img src="images/bg1_2.jpeg" alt=""></a>
-                <a href="#modal3" class="modal"><img src="images/bg1_3.jpeg" alt=""></a>
+                <a href="#modal1" class="modal"><img src="images/pink1.jpeg" alt=""></a>
+                <a href="#modal2" class="modal"><img src="images/pink2.jpeg" alt=""></a>
+                <a href="#modal3" class="modal"><img src="images/pink3.jpeg" alt=""></a>
             </div>
             <div class="modalwindow">
                 <div id="modal1" style="display:none;">
@@ -136,74 +153,46 @@
                 </div>
             </div>
         </section>
-        <section id="link-contents3">
-            <h1 class="title">Animation</h1>
-            <div class="contents3">
-                <div class="con3-res">
-                    <div class="fadein animated con3-1">
-                        <h2>ONE</h2>
-                    </div>
-                    <div class="fadein animated con3-2">
-                        <h2>TWO</h2>
-                    </div>
-                </div>
-                <div class="con3-res">
-                    <div class="fadein animated con3-3">
-                        <h2>THREE</h2>
-                    </div>
-                    <div class="fadein animated con3-4">
-                        <h2>FOUR</h2>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="link-contents4">
-            <h1 class="title">More Button</h1>
-            <div class="contents4">
-                <div class="content">
-                    <div class="contents4_in">
-                        <p>MOJI</p>
-                    </div>
-                    <p class="morebutton">OPEN</p>
-                </div>
-                <div class="content">
-                    <div class="contents4_in">
-                        <img src="images/contents4.jpeg" alt="">
-                    </div>
-                    <p class="morebutton">OPEN</p>
-                </div>
-            </div>
-        </section>
-        <section id="link-contents5">
+
+        <!--iziModalを使用したポップアップモーダル-->
+        <section id="link-contents6">
             <h1 class="title">Popup Gallery</h1>
-            <a data-iziModal-open=".iziModal" class="izimodal-btn"><img src="images/contents5_1.jpeg" alt=""></a>
+            <a data-iziModal-open=".iziModal" class="izimodal-btn">
+                <div class="con6-1"><img src="images/popup.jpeg" alt=""></div>
+            </a>
             <div class="iziModal" data-izimodal-group="group1" data-izimodal-loop="">
-                <!--
-                <div class="close">
-                    <a data-izimodal-close="">×</a>
-                </div>
-                -->
-                <img src="images/contents5_1.jpeg" alt="">
+                <img src="images/pink1.jpeg" alt="">
             </div>
             <div class="iziModal" data-izimodal-group="group1" data-izimodal-loop="">
-                <!--
-                <div class="close">
-                    <a data-izimodal-close="">×</a>
-                </div>
-                -->
-                <img src="images/contents5_2.jpeg" alt="">
+                <img src="images/pink2.jpeg" alt="">
             </div>
             <div class="iziModal" data-izimodal-group="group1" data-izimodal-loop="">
-                <!--
-                <div class="close">
-                    <a data-izimodal-close="">×</a>
-                </div>
-                -->
-                <img src="images/contents5_3.jpeg" alt="">
+                <img src="images/pink3.jpeg" alt="">
             </div>
         </section>
     </main>
     <p class="pagetop"><a href="#link-top">Top▲</a></p>
+
+
+    <!--jQueryの読み込みはGoogleのCDNからが便利-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--nav1 Drawerの読み込み-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
+    <!--bg1 raindropsの読み込み-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="./js/raindrops.js"></script>
+    <!--contents1 slickの読み込み-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="./js/slick.min.js"></script>
+    <!--contents2 modaalの読み込み-->
+    <script type="text/javascript" src="./js/modaal.min.js"></script>
+    <!--contents3 animateの読み込み-->
+    <script type="text/javascript" src="./js/jquery.animateCssPlus.js"></script>
+    <!--contents5 izimodalの読み込み-->
+    <script src="./js/iziModal.min.js" type="text/javascript"></script>
+    <!--基本データの読み込み-->
+    <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
 </html>
