--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <!--hover-->
         <section id="link-contents1">
-            <h1 class="title">Hover & Text</h1>
+            <h1 class="title">Hover</h1>
             <div class="contents1">
                 <div class="con1-1">
                     <img src="images/contents1.jpeg" alt="">
@@ -139,7 +139,7 @@
             </div>
             <div class="modalwindow">
                 <div id="modal1" style="display:none;">
-                    <img src="images/bg1_1.jpeg" alt="">
+                    <img src="images/pink1.jpeg" alt="">
                 </div>
                 <div id="modal2" style="display:none;">
                     <h2>愛を伝えたいだとか</h2>
@@ -170,6 +170,7 @@
                 <img src="images/pink3.jpeg" alt="">
             </div>
         </section>
+        
     </main>
     <p class="pagetop"><a href="#link-top">Top▲</a></p>
 
