--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class='strip colour-1'>
             <a href="#" class="">Page1</a>
             <a href="second.html" class="">Page2</a>
-            <a href="third.html" class="">Page3</a>
+            <a href=https://github.com/YukaNagatomo/Daily-Web"" class="">GitHub</a>
         </div>
     </nav>
     <header role="banner">
