--- a/second.html
+++ b/second.html
@@ -26,7 +26,7 @@
                     <ul>
                         <li><a href="index.html">Page1</a></li>
                         <li><a href="second.html">Page2</a></li>
-                        <li><a href="#">Page3</a></li>
+                        <a href=https://github.com/YukaNagatomo/Daily-Web"" class="">GitHub</a>
                     </ul>
                 </div>
             </div>
