--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main role="main" id="link-top">
 
-        <!--雨水滴る風背景-->
+        <!-- raindrops.js (雨水滴る風背景) -->
         <section id="link-bg1">
             <div id="text1" class="toptitle">
                 <h1 class="title1">For Web Course</h1>
@@ -78,7 +78,7 @@
 
         <!--CSSアニメーション-->
         <section id="link-contents2">
-            <h1 class="title">Animation</h1>
+            <h1 class="title">CSS Animation</h1>
             <div class="contents2">
                 <div class="con2-res">
                     <div class="fadein animated con2-1">
@@ -120,7 +120,7 @@
 
         <!--slickを使用したギャラリー表示-->
         <section id="link-contents4">
-            <h1 class="title">Gallery</h1>
+            <h1 class="title">slick.js</h1>
             <div class="slick">
                 <div><img src="images/contents1_1.jpg" alt=""></div>
                 <div><img src="images/contents1_2.jpeg" alt=""></div>
@@ -131,7 +131,7 @@
 
         <!--modaalを使用したモーダル表示-->
         <section id="link-contents5">
-            <h1 class="title">Modal</h1>
+            <h1 class="title">modaal.js</h1>
             <div class="switch">
                 <a href="#modal1" class="modal"><img src="images/pink1.jpeg" alt=""></a>
                 <a href="#modal2" class="modal"><img src="images/pink2.jpeg" alt=""></a>
@@ -156,7 +156,7 @@
 
         <!--iziModalを使用したポップアップモーダル-->
         <section id="link-contents6">
-            <h1 class="title">Popup Gallery</h1>
+            <h1 class="title">iziModal.js</h1>
             <a data-iziModal-open=".iziModal" class="izimodal-btn">
                 <div class="con6-1"><img src="images/popup.jpeg" alt=""></div>
             </a>
