--- a/second.html
+++ b/second.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>For Web Design Course ~Second~</title>
   <!--googlefontの読み込み-->
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
@@ -91,19 +92,19 @@
     <!--particles.jsを使用した動く背景-->
     <section id="section4" class="section section4">
       <div id="particles-js">
-        <h1>particles.js</h1>
+        <h1 class="title">particles.js</h1>
       </div>
     </section>
 
     <!--@keyframesを使ったグラデーション背景-->
     <section id="section5" class="section section5">
-      <h1>Gradation</h1>
+      <h1 class="title">Gradation</h1>
     </section>
 
     <section id="section6" class="section section6">
       <!--ShuffleLettersを使用したランダムテキスト表示-->
       <div class="slide slide1">
-        <h1 class="shuffle title1">ShuffleLetters.js</h1>
+        <h1 class="shuffle">ShuffleLetters.js</h1>
       </div>
       <div class="slide slide2">
         <h1 class="neon">Neon Text</h1>
