--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>For Web Design Course</title>
     <!--googlefontの読み込み-->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
